--- a/portfolio-step-1/index.html
+++ b/portfolio-step-1/index.html
@@ -17,7 +17,7 @@
       </div>
     </header>
 
-    <section class="hero-image">лдт.длт.длт
+    <section class="hero-image">
       <div class="container">
       <h1 class="heading">Неопознанный Енот</h1>
       <p>Junior верстальщик</p>
