--- a/portfolio-step-1/index.html
+++ b/portfolio-step-1/index.html
@@ -11,8 +11,8 @@
     
     <header class="page-header">
       <div class="container">
-        <a href="mailto:samolet75@bk.ru">samolet75@bk.ruььь</a>
-        <a href="tel:8-909-934-05-75">8-909-934-05-75</a>
+        <a class="header-email" href="mailto:samolet75@bk.ru">samolet75@bk.ruььь</a>
+        <a class="header-phone" href="tel:8-909-934-05-75">8-909-934-05-75</a>
       Контакты в шапке
       </div>
     </header>
@@ -51,6 +51,8 @@
     
     <footer class="page-footer">
       <div class="container">
+        <a class="footer-email" href="mailto:samolet75@bk.ru">samolet75@bk.ruььь</a>
+        <a class="footer-phone" href="tel:8-909-934-05-75">8-909-934-05-75</a>
       Контакты в подвале
       </div>
     </footer>
